# support-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260610_0001_create_support_tables.py
backend/app/: __init__.py  config.py  exceptions.py  logging_config.py  main.py  mcp_client.py  middleware.py
backend/app/agents/: __init__.py  factory.py  graph.py  schemas.py  state.py
backend/app/agents/nodes/: __init__.py  billing_decision.py  guardrails.py  router.py  stubs.py
backend/app/api/: __init__.py  agents.py  health.py  mcp_tools.py
backend/app/db/: base.py  models.py  session.py
backend/scripts/: seed_mock_data.py
backend/tests/: test_agent_graph.py  test_db_models.py  test_e2e_workflow.py  test_health.py  test_logging_errors.py  test_mcp_client.py  test_mcp_integration.py  test_ollama_fallback.py  test_router_agent.py
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/__tests__/: page.test.tsx
frontend/app/hooks/: useAgentStream.ts
mcp-servers/billing/: Dockerfile  pyproject.toml  server.py
mcp-servers/telemetry/: Dockerfile  pyproject.toml  server.py
