[project]
name = "support-ai-backend"
version = "0.1.0"
description = "Multi-Agent Customer Support Platform - Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "colorama>=0.4.6",
    "fastapi[standard]==0.136.3",
    "fastmcp>=3.4.2",
    "httpx2>=2.3.0",
    "langchain-core>=1.1.3",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=0.2.0",
    "langgraph>=1.0.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
]
ignore = ["B008"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
